add footer to frontend

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,6 +32,19 @@
   padding-top: 50px;
 }
 
+footer {
+  display: flex;
+  justify-content: center;
+  height: 100px;
+  margin: 40px;
+}
+
+.footerP {
+  font-size: 1rem;
+  color: #28527a;
+  padding-top: 20px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
